--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Eyekeno Robert
+logo: 
+description: "Personal portfolio and blog of Eyekeno Robert. Sharing ideas, projects, and stories."
+theme: jekyll-theme-minimal
 
